Actualizacion de TV

--- a/CodeBarraWeb/Views/Reporte/Index.cshtml
+++ b/CodeBarraWeb/Views/Reporte/Index.cshtml
@@ -105,6 +105,10 @@
                                     <td><select class="form-control" id="ddlProceso"></select></td>
                                 </tr>
                                 <tr>
+                                    <td><label>IP:</label></td>
+                                    <td><input type="text" id="txtIP"></td>
+                                </tr>
+                                <tr>
                                     <td><label>Tiempo:</label></td>
                                     <td><input type="text" id="txtTiempoProceso"></td>
                                 </tr>
