--- a/Publicado/Views/Reporte/ReporteTV.cshtml
+++ b/Publicado/Views/Reporte/ReporteTV.cshtml
@@ -180,20 +180,8 @@
                 </div>
             </div>
 
-            <div id="divDetalle">
-                <div class="col-md-12">
-                    <div class="row">
-                        <img src="~/Imagenes/franja_Blanca.jpg" class="col-md-12" />
-                    </div>
-
-                </div>
-                <div class="col-md-12">
-                    <div class="row">
-                        <img id="idImagen" src="" class="col-md-12" />
-                    </div>
-                </div>
-
-                <div class="col-md-2"></div>
+            <div id="divDetalle" class="container">
+                <img id="idImagen" src="" width="100%" />
             </div>
         </section>
 </div>
