--- a/Publicado/Views/Reporte/ReportePopup.cshtml
+++ b/Publicado/Views/Reporte/ReportePopup.cshtml
@@ -14,7 +14,7 @@
     @Styles.Render("~/Estilos/css")
 
 </head>
-<body>
+<body >
     <div id="divPrincipal">
         <div class="row bg-blue">
             <div class="col-md-2">
@@ -184,20 +184,8 @@
         </div>
     </div>
 
-    <div id="divDetalle">
-        <div class="col-md-12">
-            <div class="row">
-                <img src="~/Imagenes/franja_Blanca.jpg" class="col-md-12" />
-            </div>
-
-        </div>
-        <div class="col-md-12">
-            <div class="row">
-                <img id="idImagen" src="" class="col-md-12" />
-            </div>
-        </div>
-
-        <div class="col-md-2"></div>
+    <div id="divDetalle" class="container">
+        <img id="idImagen" src="" width="100%"  />
     </div>
 
     @Scripts.Render("~/Bootstrap/assets/js")
