--- a/CodeBarraWeb/Views/Reporte/ReportePopup.cshtml
+++ b/CodeBarraWeb/Views/Reporte/ReportePopup.cshtml
@@ -14,7 +14,7 @@
     @Styles.Render("~/Estilos/css")
 
 </head>
-<body >
+<body class="container-fluid" >
     <div id="divPrincipal">
         <div class="row bg-blue">
             <div class="col-md-2">
@@ -184,8 +184,17 @@
         </div>
     </div>
 
-    <div id="divDetalle" class="container">
-        <img id="idImagen" src="" width="100%"  />
+    <div id="divDetalle" class="containerimg" >
+        <div>
+            <img id="idImagenSup" src="~/Imagenes/franja_Blanca.jpg"  />
+        </div>
+        <div>
+            <img id="idImagen" src="" width="1350" height="650" />
+        </div>
+        
+        <div>
+            <img id="idImagenInf" src="~/Imagenes/franja_Blanca.jpg" />
+        </div>
     </div>
 
     @Scripts.Render("~/Bootstrap/assets/js")
